<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/_250sdp"
    app:cardCornerRadius="@dimen/default_fifteen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@color/dark_background"
        android:padding="@dimen/padding_five">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/attention"
            android:textAllCaps="true"
            android:textColor="@color/gold"
            android:textSize="@dimen/text_size_16" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14"
            tools:text="@string/app_name" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@+id/txtMessage"
            android:background="@color/text_color_light" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/default_fifteen"
            app:cardCornerRadius="@dimen/padding_five"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOK"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:background="@drawable/bg_round_corners"
                android:backgroundTint="@color/gold_dark"
                android:foreground="?selectableItemBackground"
                android:text="@string/okay"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
